arc-script-old/tests/unit/src/snapshots/rust@basic_by.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/basic_by.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    pub fn test() -> i32 {
        let x_0: i32 = 1i32;
        let x_1: i32 = 2i32;
        let x_2: Struct3keyi325valuei32End = new!(Struct3keyi325valuei32End {
            value: val!(x_0),
            key: val!(x_1)
        });
        let x_3: i32 = access!(val!(x_2), value);
        let x_4: i32 = access!(val!(x_2), key);
        let x_5: i32 = val!(x_3) + val!(x_4);
        val!(x_5)
    }
    #[codegen::rewrite]
    pub struct Struct3keyi325valuei32End {
        key: i32,
        value: i32,
    }
}
pub use arc_script_output::*;


