arc-script-old/tests/unit/src/snapshots/rust@fib.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/fib.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    pub fn fib(n_0: i32) -> i32 {
        let x_0: i32 = 2i32;
        let x_1: bool = val!(n_0) > val!(x_0);
        let x_C: i32 = if val!(x_1) {
            let x_2: Box<dyn ValueFn(i32) -> i32> = Box::new(fib) as Box<dyn ValueFn(i32) -> i32>;
            let x_3: i32 = 1i32;
            let x_4: i32 = val!(n_0) - val!(x_3);
            let x_5: i32 = val!(x_2)(val!(x_4));
            let x_6: Box<dyn ValueFn(i32) -> i32> = Box::new(fib) as Box<dyn ValueFn(i32) -> i32>;
            let x_7: i32 = 2i32;
            let x_8: i32 = val!(n_0) - val!(x_7);
            let x_9: i32 = val!(x_6)(val!(x_8));
            let x_A: i32 = val!(x_5) + val!(x_9);
            val!(x_A)
        } else {
            let x_B: i32 = 0i32;
            val!(x_B)
        };
        val!(x_C)
    }
    pub fn test() -> i32 {
        let x_D: Box<dyn ValueFn(i32) -> i32> = Box::new(fib) as Box<dyn ValueFn(i32) -> i32>;
        let x_E: i32 = 5i32;
        let x_F: i32 = val!(x_D)(val!(x_E));
        val!(x_F)
    }
}
pub use arc_script_output::*;


