arc-script-old/tests/unit/src/snapshots/rust@pattern.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/pattern.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    pub fn main() -> Unit {
        let x_0: i32 = 1i32;
        let x_1: i32 = 2i32;
        let x_2: (i32, i32) = (val!(x_0), val!(x_1));
        let x_3: i32 = 3i32;
        let x_4: i32 = 4i32;
        let x_5: (i32, i32) = (val!(x_3), val!(x_4));
        let x_6: ((i32, i32), (i32, i32)) = (val!(x_2), val!(x_5));
        let x_7: (i32, i32) = val!(x_6).0;
        let x_8: i32 = val!(x_7).0;
        let x_9: i32 = val!(x_7).1;
        let x_A: (i32, i32) = val!(x_6).1;
        let x_B: i32 = val!(x_A).0;
        let x_C: i32 = val!(x_A).1;
        let x_D: Unit = ();
        val!(x_D)
    }
}
pub use arc_script_output::*;


